# leogram

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/accounts/: models.py
apps/accounts/actions/: confirm_email.py  follows.py  login.py  password_reset.py  register.py  resend_verification.py  verify_email.py
apps/accounts/api/: serializers.py  urls.py  user_urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_emailverificationtoken.py  0003_passwordresettoken.py  0004_follow.py
apps/accounts/tests/integration/: test_email_verification_api.py  test_follows_api.py  test_login_api.py  test_password_reset_api.py
apps/accounts/tests/unit/: test_email_verification.py  test_follows.py  test_login.py  test_password_reset.py  test_register_action.py  test_register_api.py
apps/posts/: models.py
apps/posts/actions/: comments.py  create_post.py  image.py
apps/posts/api/: serializers.py  urls.py  views.py
apps/posts/migrations/: 0001_initial.py  0002_comment.py
apps/posts/tests/integration/: test_comments_api.py  test_posts_api.py
apps/posts/tests/unit/: test_comments.py  test_posts.py
config/: settings.py  urls.py
